apps/prowlarr/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: homepage
        app.kubernetes.io/name: homepage
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: radarr
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: sonarr
    toPorts:
    - ports:
      - port: "9696"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: flaresolverr
    toPorts:
    - ports:
      - port: "8191"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: radarr
    toPorts:
    - ports:
      - port: "7878"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: sonarr
    toPorts:
    - ports:
      - port: "8989"
        protocol: TCP
  # Direct indexer/API destinations observed with Hubble after the latest
  # indexer refresh. 1337x fallback domains are included from its configured
  # indexer URL list so mirror failover does not require emergency policy work.
  - toFQDNs:
    - matchName: 1337x.to
    - matchName: 1337x.st
    - matchName: x1337x.ws
    - matchName: x1337x.eu
    - matchName: x1337x.cc
    - matchName: apibay.org
    - matchName: itorrents.org
    - matchName: movies-api.accel.li
    - matchName: nyaa.si
    - matchName: oldgreektracker.xyz
    - matchName: rutracker.org
    - matchName: yts.gg
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
